samples/_failures_safe/1761552331_cbced3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a137b2b.c: In function ‘main’:
./samples/SAFE/__tmp_8a137b2b.c:164:5: error: expected expression at end of input
  164 |     size_t compressed_size = compress_rle((uint8_t*)
      |     ^~~~~~
./samples/SAFE/__tmp_8a137b2b.c:164:30: error: too few arguments to function ‘compress_rle’
  164 |     size_t compressed_size = compress_rle((uint8_t*)
      |                              ^~~~~~~~~~~~
./samples/SAFE/__tmp_8a137b2b.c:69:8: note: declared here
   69 | size_t compress_rle(const uint8_t *input, size_t input_size, uint8_t *output, size_t output_capacity) {
      |        ^~~~~~~~~~~~
./samples/SAFE/__tmp_8a137b2b.c:164:5: error: expected declaration or statement at end of input
  164 |     size_t compressed_size = compress_rle((uint8_t*)
      |     ^~~~~~
